[tool.poetry]
name = "morph-example-0.2.0"
version = "0.1.0"
description = ""
authors = ["Keita Mitsuhashi <keita.mitsuhashi.83@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
morph-data = "0.2.0rc1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
